# burogu

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  archives.h  clay_impl.c  font_loader.c  font_loader.h  gen_archive_list.py  gen_glyph_range.py  glyph_range.h  main.c  preload.js  renderer.c  util.h
markdown/: _main.md
